minimal backend support for Discovered table
